# workiva-sdk

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  breaking_changes_report.md  mkdocs.yml  pyproject.toml  spec_sources.conf  wdata.yaml
.github/: CODEOWNERS
workiva-sdk/: .gitignore  README.md  USAGE.md  gen.yaml  pylintrc  pyproject.toml
workiva-sdk/docs/errors/: errorwithoutlinenumber.md  jsonapi.md
workiva-sdk/docs/models/: activitieslistresult.md  activityaction.md  activityattachments.md  activitymodified.md  activityschemascreated.md  activitystatus.md  activityuser.md  activityworkspace.md  aggregation.md  anchorattachmentpointdrawingrichtextselection.md  anchorattachmentpointrichtextselection.md  anchorattachmentpointtype.md  anchorextension.md  anchorref.md  applicabletextformat.md  applicabletextformatbackgroundcolor.md  applicabletextformattextcolor.md  assignorganizationuserrolesrequest.md  assignorganizationuserrolesresponse.md  assignusertoorganizationrequest.md  backgroundcolor.md  backgroundschemascolor.md  baseerrorresponsedetail.md  baseresponseconnectionrundto.md  baseresponsefilemetadto.md  baseresponseimportinfodto.md  baseresponsequerycolumndatadto.md  baseresponsequeryresultdto.md  baseresponsesharedtabledto.md  baseresponsespreadsheetinfodto.md  baseresponsestring.md  baseresponsevalidatefilesdto.md  batchdeletionmetricvaluesrequest.md  border.md  borders.md  bottom.md  caret.md  celldata.md  celledit.md  cellformatinput.md  (+743 more)
workiva-sdk/docs/sdks/activities/: README.md
workiva-sdk/docs/sdks/admin/: README.md
workiva-sdk/docs/sdks/chains/: README.md
workiva-sdk/docs/sdks/content/: README.md
workiva-sdk/docs/sdks/documents/: README.md
workiva-sdk/docs/sdks/files/: README.md
workiva-sdk/docs/sdks/graph/: README.md
workiva-sdk/docs/sdks/milestones/: README.md
workiva-sdk/docs/sdks/operations/: README.md
workiva-sdk/docs/sdks/permissions/: README.md
workiva-sdk/docs/sdks/presentations/: README.md
workiva-sdk/docs/sdks/reports/: README.md
workiva-sdk/docs/sdks/spreadsheets/: README.md
workiva-sdk/docs/sdks/sustainability/: README.md
workiva-sdk/docs/sdks/tasks/: README.md
workiva-sdk/docs/sdks/testforms/: README.md
workiva-sdk/docs/sdks/wdata/: README.md
workiva-sdk/src/workiva/: _auth.py  _client.py  _constants.py  _pagination.py  _retry.py  _version.py  activities.py  admin.py  chains.py  client.py  content.py  documents.py  exceptions.py  files.py  graph.py  milestones.py  operations.py  permissions.py  polling.py  presentations.py  reports.py  sdk.py  sdkconfiguration.py  spreadsheets.py  sustainability.py  tasks.py  test_forms.py  wdata.py
workiva-sdk/src/workiva/_hooks/: clientcredentials.py  sdkhooks.py  types.py  version_header.py
workiva-sdk/src/workiva/_operations/: admin.py  administrative_tasks.py  connection_management.py  content.py  dataprep.py  documents.py  execution.py  file_management.py  files.py  folder_management.py  graph.py  iam.py  milestones.py  operations.py  parameter_management.py  pivot_view_management.py  presentations.py  query_management.py  reports.py  security.py  select_list_management.py  shared_table_management.py  spreadsheets.py  sustainability.py  table_management.py  tag_management.py  tasks.py  test_forms.py  token_management.py  utilities.py  workspace.py
workiva-sdk/src/workiva/errors/: __init__.py  chains_updaterulesop.py  chainsingleerror.py  errorwithoutlinenumber.py  failure.py  responsevalidationerror.py  singleerror.py
workiva-sdk/tests/integration/: test_async_flow.py  test_auth_flow.py  test_multi_server_auth.py
workiva-sdk/tests/unit/: test_base_client.py  test_exceptions.py  test_operation_poller.py  test_operation_server_order.py  test_pagination.py  test_polling_helpers.py  test_workiva_client.py
(+2335 files in other folders)
