
[project]
name = "workiva"
version = "0.6.3"
description = "Workiva Python SDK - Unified client for Platform, Chains, and Wdata APIs"
authors = [{ name = "Jorge Revenga", email = "jrevengamartindevida@deloitte.es" },]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx >=0.28.1",
    "pydantic >=2.11.2",
    "typing-extensions >=4.11",
]

[project.urls]
Homepage = "https://github.com/DeloitteWorkiva/workiva-sdk"
Documentation = "https://deloitteworkiva.github.io/workiva-sdk/"
Repository = "https://github.com/DeloitteWorkiva/workiva-sdk"
Issues = "https://github.com/DeloitteWorkiva/workiva-sdk/issues"
Changelog = "https://github.com/DeloitteWorkiva/workiva-sdk/releases"

[tool.poetry]
packages = [
    { include = "workiva", from = "src" }
]
include = ["py.typed", "src/workiva/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/workiva/py.typed"]

[virtualenvs]
in-project = true

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.22",
]
codegen = [
    "datamodel-code-generator>=0.28",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "black>=24.0",
    "isort>=5.13",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
exclude = ["tests"]


