
[project]
name = "workiva"
version = "0.5.3"
description = "Workiva Python SDK - Unified client for Platform, Chains, and Wdata APIs"
authors = [{ name = "Jorge Revenga", email = "jrevengamartindevida@deloitte.es" },]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpcore >=1.0.9",
    "httpx >=0.28.1",
    "jsonpath-python >=1.0.6",
    "pydantic >=2.11.2",
    "typing-extensions >=4.11",
]

[project.urls]
Homepage = "https://github.com/DeloitteWorkiva/workiva-sdk"
Documentation = "https://deloitteworkiva.github.io/workiva-sdk/"
Repository = "https://github.com/DeloitteWorkiva/workiva-sdk"
Issues = "https://github.com/DeloitteWorkiva/workiva-sdk/issues"
Changelog = "https://github.com/DeloitteWorkiva/workiva-sdk/releases"

[tool.poetry]
packages = [
    { include = "workiva", from = "src" }
]
include = ["py.typed", "src/workiva/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/workiva/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.group.dev.dependencies]
mypy = "==1.15.0"
pylint = "==3.2.3"
pyright = "==1.1.398"
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
pytest-cov = ">=6.0"
respx = ">=0.22"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.22",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


